ajustar img proyecto

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
           </div>
         </section>
         <section id="proyectos" class="border">
-          <h1>Mis proyectos</h1>
-          <div class="project-preview">
-            <iframe
-              src="https://sonic-400.github.io/recetas/"
-              title="Recetas Argentinas"
-              loading="lazy"
-            >
-            </iframe>
-            <p>Vista previa: Recetas Argentinas</p>
+          <h1>Mis proyectos:</h1>
+          <div class="proyecto">
+            <img src="/tp2/Captura.PNG" alt="Vista previa recetas" />
+            <p>
+              Vista previa: Recetas Argentinas
+              <a href="https://sonic-400.github.io/recetas"
+                >https://sonic-400.github.io/recetas</a
+              >
+            </p>
           </div>
         </section>
       </main>
