foto pagina reseñas

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Marco Antonio Gonzalez</h1>
       </header>
       <nav class="border">
-        <a href="#Inicio">Inicio </a>
-        <a href="#Proyectos">Proyectos</a>
-        <a href="#Contactame">Contactame</a>
+        <a href="#inicio">Inicio </a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#contactame">Contactame</a>
       </nav>
 
       <aside id="foto">
@@ -58,10 +58,23 @@
         </section>
         <section id="proyectos" class="border">
           <h1>Mis proyectos:</h1>
+          <h3 style="justify-self: center">Recetas Argentinas:</h3>
           <div class="proyecto">
             <img src="/tp2/Captura.PNG" alt="Vista previa recetas" />
             <p>
               Vista previa: Recetas Argentinas
+              <a href="https://sonic-400.github.io/recetas"
+                >https://sonic-400.github.io/recetas</a
+              >
+            </p>
+          </div>
+        </section>
+        <section id="proyectos" class="border">
+          <h3 style="justify-self: center">Segundo proyecto</h3>
+          <div class="proyecto">
+            <img src="/tp2/001.png" alt="Vista previa recetas" />
+            <p>
+              Vista previa:
               <a href="https://sonic-400.github.io/recetas"
                 >https://sonic-400.github.io/recetas</a
               >
