correción link reseñas

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <section id="experiencia" class="border">
           <h1>Experiencia que tengo</h1>
           <p>
-            Durante el curso de <strong>Desarrollo Web</strong> he aprendido las
-            bases de <strong>HTML</strong> y <strong>CSS</strong>, aplicando
+            Durante el curso de <strong>Desarrollo Web</strong> pude aprender
+            las bases de <strong>HTML</strong> y <strong>CSS</strong>, aplicando
             conceptos de maquetación, buenas prácticas y organización de código.
             He trabajado con <code>display: grid</code> y
             <code>flexbox</code> para estructurar páginas, y he incorporado
@@ -75,8 +75,8 @@
             <img src="/tp2/001.png" alt="Vista previa recetas" />
             <p>
               Vista previa:
-              <a href="https://sonic-400.github.io/recetas"
-                >https://sonic-400.github.io/recetas</a
+              <a href="https://sonic-400.github.io/rese-as"
+                >https://sonic-400.github.io/rese-as</a
               >
             </p>
           </div>
