--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
             </p>
           </div>
         </section>
+        <!-- Sección proximamente -->
+        <section id="proyectos" class="border">
+          <h3 style="justify-self: center">Próximamente...</h3>
+          <div class="proyecto">
+            <img src="/tp2/proximamente.png" alt="proximamente" />
+            <h3 style="background-color: yellow">
+              Tengo pensado agregar un CV mas detallado sobre mí y también
+              <br />
+              quisiera hacer una página de servicio técnico de impresoras, ya
+              que <br />
+              yo soy técnico en eso, en impresoras 😊
+            </h3>
+          </div>
+        </section>
       </main>
       <footer id="contactame" class="border">
         <h3>Contacto:</h3>
